Fix: Use min-height and padding-bottom for keyboard spacing
- Removed body padding approach
- Added min-height: calc(100vh - 240px) to ion-content
- Added padding-bottom: 240px !important to ion-content
- Forces content to always have space for keyboard

--- a/src/app/config/config.page.scss
+++ b/src/app/config/config.page.scss
@@ -73,16 +73,10 @@
   }
 }
 
-body {
-  padding-bottom: 240px;
-}
-
 ion-content {
   --background: var(--background);
-  
-  &.keyboard-visible {
-    margin-bottom: 240px;
-  }
+  min-height: calc(100vh - 240px);
+  padding-bottom: 240px !important;
 }
 
 ion-item {
